--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -19,4 +20,7 @@
 
 .App-link {
   color: #09d3ac;
+}
+body {
+	font-family: 'Kanit' !important;
 }
